--- a/.gitignore
+++ b/.gitignore
@@ -8,12 +8,11 @@
 # testing
 /coverage
 
-# next.js
-/.next/
-/out/
+# client
+/client/node_modules
 
 # production
-/build
+/client/build
 
 # misc
 .DS_Store
@@ -25,6 +24,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
+.env
 .env.local
 .env.development.local
 .env.test.local
