--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,7 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Discograph",
+  "name": "Discograph",
+  "description": "Create a playlist of an artist’s entire discography - with one click",
   "icons": [
     {
       "src": "favicon.ico",
