--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -9,7 +9,7 @@
       "type": "image/x-icon"
     },
     {
-      "src": "android-chrome-192x192",
+      "src": "android-chrome-192x192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
